Refactor token stream and error handling in TokenStream
Streamlined TokenStream to improve error reporting, handle invalid tokens, and introduce package/import parsing. Added support for tokenization error management with detailed diagnostics and better outputs. Adjusted test suite accordingly for consistency and coverage.

Changed the toml parsing library to one that wouldn't break because of the native compile